--- a/ParqueosCallejeros/pom.xml
+++ b/ParqueosCallejeros/pom.xml
@@ -39,7 +39,12 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.15.2</version>
         </dependency>
-        
+        <dependency>
+            <groupId>com.sum.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
