--- a/ParqueosCallejeros/pom.xml
+++ b/ParqueosCallejeros/pom.xml
@@ -45,6 +45,12 @@
             <version>1.6.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
