--- a/ParqueosCallejeros/pom.xml
+++ b/ParqueosCallejeros/pom.xml
@@ -40,6 +40,11 @@
             <version>2.15.2</version>
         </dependency>
         <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.toedter</groupId>
             <artifactId>jcalendar</artifactId>
             <version>1.4</version>
